--- a/app/src/main/res/layout/activity_esquecerpalavrapasse.xml
+++ b/app/src/main/res/layout/activity_esquecerpalavrapasse.xml
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="40dp"
-        android:text="Esqueci-me da minha palavra-passe"
+        android:text="@string/esqueci_me_da_minha_palavra_passe"
         android:textColor="@android:color/black"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -54,7 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="25dp"
         android:layout_marginTop="20dp"
-        android:text="Endereço de Email"
+        android:text="@string/endere_o_de_email"
         android:textColor="#616161"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,7 +81,7 @@
         android:layout_width="315dp"
         android:layout_height="72dp"
         android:layout_marginTop="30dp"
-        android:text="Enviar"
+        android:text="@string/enviar"
         android:textAllCaps="false"
         android:textColor="@color/white"
         app:layout_constraintEnd_toStartOf="@+id/parentEnd"
