--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,9 +39,9 @@
         android:id="@+id/titleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:layout_marginStart="8dp"
-        android:text="Entrar"
+        android:layout_marginTop="16dp"
+        android:text="@string/entrar"
         android:textColor="@android:color/black"
         android:textSize="40sp"
         android:textStyle="bold"
@@ -52,9 +52,9 @@
         android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:layout_marginStart="8dp"
-        android:text="Endereço de Email"
+        android:layout_marginTop="16dp"
+        android:text="@string/endere_o_de_email"
         android:textColor="#616161"
         android:textSize="25sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,9 +78,9 @@
         android:id="@+id/password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:layout_marginStart="8dp"
-        android:text="Palavra-Passe"
+        android:layout_marginTop="16dp"
+        android:text="@string/senha"
         android:textColor="#616161"
         android:textSize="25sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -105,9 +105,9 @@
         android:id="@+id/forgotPasswordTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:layout_marginStart="8dp"
-        android:text="Esqueceu a Palavra-Passe?"
+        android:layout_marginTop="8dp"
+        android:text="@string/esqueceu_a_palavra_passe"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -118,9 +118,9 @@
         android:id="@+id/loginButton"
         android:layout_width="315dp"
         android:layout_height="72dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="10dp"
         android:drawableEnd="@drawable/seta"
-        android:text="Entrar"
+        android:text="@string/entrar"
         android:textAllCaps="false"
         android:textColor="@color/white"
         app:layout_constraintEnd_toStartOf="@+id/parentEnd"
@@ -134,7 +134,7 @@
         android:layout_height="72dp"
         android:layout_marginTop="8dp"
         android:drawableEnd="@drawable/seta"
-        android:text="Registar"
+        android:text="@string/registrar"
         android:textAllCaps="false"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toStartOf="@+id/parentEnd"
