--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -41,21 +41,21 @@
         android:id="@+id/usernameEditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Nome de Utilizador"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
         android:background="@android:color/transparent"
-        android:textColorHint="@android:color/white"
-        android:textColor="@android:color/white"
+        android:hint="@string/nomeUser"
         android:paddingBottom="8dp"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
         android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/avatarButton"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/avatarButton"
         app:layout_constraintWidth_default="spread"
-        app:layout_constraintWidth_percent="0.8"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginTop="32dp" />
+        app:layout_constraintWidth_percent="0.8" />
 
     <View
         android:id="@+id/usernameLine"
@@ -75,21 +75,21 @@
         android:id="@+id/firstNameEditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Primeiro Nome"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
         android:background="@android:color/transparent"
-        android:textColorHint="@android:color/white"
-        android:textColor="@android:color/white"
+        android:hint="@string/primeiroNome"
         android:paddingBottom="8dp"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
         android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/usernameLine"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/usernameLine"
         app:layout_constraintWidth_default="spread"
-        app:layout_constraintWidth_percent="0.8"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginTop="16dp" />
+        app:layout_constraintWidth_percent="0.8" />
 
     <View
         android:id="@+id/firstNameLine"
@@ -109,21 +109,21 @@
         android:id="@+id/lastNameEditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Sobrenome"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
         android:background="@android:color/transparent"
-        android:textColorHint="@android:color/white"
-        android:textColor="@android:color/white"
+        android:hint="@string/Sobrenome"
         android:paddingBottom="8dp"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
         android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/firstNameLine"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/firstNameLine"
         app:layout_constraintWidth_default="spread"
-        app:layout_constraintWidth_percent="0.8"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginTop="16dp" />
+        app:layout_constraintWidth_percent="0.8" />
 
     <View
         android:id="@+id/lastNameLine"
@@ -142,21 +142,21 @@
         android:id="@+id/destrito"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Selecione o seu destrito"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
         android:background="@android:color/transparent"
-        android:textColorHint="@android:color/white"
-        android:textColor="@android:color/white"
+        android:hint="@string/Selecione_o_seu_destrito"
         android:paddingBottom="8dp"
+        android:textColor="@android:color/white"
+        android:textColorHint="@android:color/white"
         android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/lastNameLine"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/lastNameLine"
         app:layout_constraintWidth_default="spread"
-        app:layout_constraintWidth_percent="0.8"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginTop="16dp" />
+        app:layout_constraintWidth_percent="0.8" />
 
     <Spinner
         android:id="@+id/tipoSpinner"
@@ -177,20 +177,19 @@
         android:id="@+id/confirmButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
         android:backgroundTint="@android:color/white"
+        android:text="@string/save"
+        android:textAllCaps="false"
         android:textColor="@android:color/black"
         android:textSize="18sp"
-        android:text="Guardar Dados"
-        android:textAllCaps="false"
-        app:layout_constraintTop_toBottomOf="@id/destrito"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintWidth_percent="0.8"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="32dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/destrito"
+        app:layout_constraintWidth_percent="0.8" />
 
     <!-- Barra de Navegação Inferior -->
 
