--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="40dp"
-        android:text="Registar"
+        android:text="@string/registrar"
         android:textColor="@android:color/black"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -54,7 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="25dp"
         android:layout_marginTop="20dp"
-        android:text="Endereço de Email"
+        android:text="@string/endere_o_de_email"
         android:textColor="#616161"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,7 +82,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="25dp"
         android:layout_marginTop="20dp"
-        android:text="Palavra-Passe"
+        android:text="@string/senha"
         android:textColor="#616161"
         android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -110,7 +110,7 @@
         android:layout_height="72dp"
         android:layout_marginTop="30dp"
         android:drawableEnd="@drawable/seta"
-        android:text="Registar"
+        android:text="@string/registrar"
         android:textAllCaps="false"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toStartOf="@+id/parentEnd"
@@ -124,7 +124,7 @@
         android:layout_height="72dp"
         android:layout_marginTop="8dp"
         android:drawableEnd="@drawable/seta"
-        android:text="Entrar"
+        android:text="@string/entrar"
         android:textAllCaps="false"
         android:textColor="@color/white"
         app:layout_constraintEnd_toStartOf="@+id/parentEnd"
