--- a/app/src/main/res/layout/activity_create_user.xml
+++ b/app/src/main/res/layout/activity_create_user.xml
@@ -21,7 +21,7 @@
         android:layout_below="@id/imageViewLogo"
         android:layout_marginTop="24dp"
         android:padding="10dp"
-        android:hint="Nome"
+        android:hint="@string/nome"
         android:textColor="@android:color/white" />
 
     <EditText
@@ -31,7 +31,7 @@
         android:layout_below="@id/editTextName"
         android:layout_marginTop="12dp"
         android:padding="10dp"
-        android:hint="Email"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
         android:textColor="@android:color/white" />
 
@@ -42,7 +42,7 @@
         android:layout_below="@id/editTextEmail"
         android:layout_marginTop="12dp"
         android:padding="10dp"
-        android:hint="Senha"
+        android:hint="@string/senha"
         android:inputType="textPassword"
         android:textColor="@android:color/white" />
 
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/editTextPassword"
         android:layout_marginTop="24dp"
-        android:text="Criar Utilizador"
+        android:text="@string/criar_utilizador"
         android:background="@drawable/button_background"
         android:textColor="@android:color/white"
         android:textAllCaps="false" />
@@ -65,7 +65,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
         android:src="@drawable/setaback"
-        android:contentDescription="Voltar"
+        android:contentDescription="@string/voltar"
         android:onClick="goToHomePageAdmin" />
 
 </RelativeLayout>
