--- a/app/src/main/res/layout/activity_home_page_admin.xml
+++ b/app/src/main/res/layout/activity_home_page_admin.xml
@@ -55,7 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:padding="16dp"
-            android:text="Utilizadores"
+            android:text="@string/utilizadores"
             android:textSize="36sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
