--- a/app/src/main/res/layout/activity_solicitaraprovacao.xml
+++ b/app/src/main/res/layout/activity_solicitaraprovacao.xml
@@ -61,7 +61,7 @@
                     android:id="@+id/coordenadasTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Coordenadas"
+                    android:text="@string/coordenadas"
                     android:textSize="18sp"
                     android:layout_marginBottom="8dp"/>
 
@@ -71,7 +71,7 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/coordenadasTextView"
                     android:layout_marginTop="8dp"
-                    android:hint="Digite as coordenadas"
+                    android:hint="@string/digite_as_coordenadas"
                     android:minHeight="48dp" />
             </RelativeLayout>
 
@@ -84,7 +84,7 @@
                     android:id="@+id/tipoTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Tipo"
+                    android:text="@string/tipo"
                     android:textSize="18sp"
                     android:layout_marginBottom="8dp"/>
 
@@ -108,7 +108,7 @@
                     android:id="@+id/dataTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Data De Realização"
+                    android:text="@string/data_de_realiza_o"
                     android:textSize="18sp"
                     android:layout_marginBottom="8dp"/>
 
@@ -120,7 +120,7 @@
                     android:layout_marginStart="5dp"
                     android:layout_marginTop="5dp"
                     android:layout_marginEnd="40dp"
-                    android:hint="Digite a data que pretende realizar"
+                    android:hint="@string/digite_a_data_que_pretende_realizar"
                     android:drawableEnd="@drawable/calendario"
                     android:focusable="false"
                     android:minHeight="48dp" />
@@ -136,7 +136,7 @@
                     android:id="@+id/motivoTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Motivo"
+                    android:text="@string/motivo"
                     android:textSize="18sp"
                     android:layout_marginBottom="8dp"/>
 
@@ -147,7 +147,7 @@
                     android:layout_below="@id/motivoTextView"
                     android:layout_alignParentStart="true"
                     android:layout_marginTop="5dp"
-                    android:hint="Digite o motivo"
+                    android:hint="@string/digite_o_motivo"
                     android:minHeight="48dp" />
             </RelativeLayout>
 
@@ -156,7 +156,7 @@
                 android:id="@+id/solicitar_aprovacao_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Solicitar Aprovação"
+                android:text="@string/solicitar_aprova_o"
                 android:layout_marginTop="16dp"
                 android:layout_gravity="center_horizontal"/>
 
